Fix login banner spacing

--- a/frontend/src/pages/Login/components/Banner/Banner.scss
+++ b/frontend/src/pages/Login/components/Banner/Banner.scss
@@ -25,6 +25,7 @@
     font-size: 5rem;
     font-weight: 500;
     margin-top: 1rem;
+    margin-bottom: 0;
   }
 
   &__subtitle {
